--- a/config.toml
+++ b/config.toml
@@ -99,10 +99,10 @@ disqusShortname = ""
       #Add source, Dakarlives
 
     [[params.tiles.showcase]]
-      title = "Tempus"
-      subtitle = "Feugiat Amet Tempus"
+      title = "GDP of the 3 countries I've lived in"
+      #subtitle = "Feugiat Amet Tempus"
       image = "pic02.jpg"
-      url = "blogs/tempus"
+      url = "Projects/GDP"
 
     [[params.tiles.showcase]]
       title = "Magna"
@@ -116,13 +116,13 @@ disqusShortname = ""
       image = "pic04.jpg"
       url = "blogs/ipsum"
 
-    [[params.tiles.showcase]]
+    #[[params.tiles.showcase]]
       title = "Consequat"
       subtitle = "Ipsum Dolor Sit Amet"
       image = "pic05.jpg"
       url = "blogs/ipsum"
 
-    [[params.tiles.showcase]]
+    #[[params.tiles.showcase]]
       title = "Etiam"
       subtitle = "Feugiat Amet Tempus"
       image = "pic06.jpg"
