--- a/config.toml
+++ b/config.toml
@@ -102,7 +102,7 @@ disqusShortname = ""
       title = "GDP of the 3 countries I've lived in"
       #subtitle = "Feugiat Amet Tempus"
       image = "pic03.jpg"
-      url = "Projects/GDP"
+      url = "blogs/blog7"
 
     [[params.tiles.showcase]]
       title = "Magna"
