--- a/config.toml
+++ b/config.toml
@@ -124,7 +124,7 @@ disqusShortname = ""
 
     [[params.tiles.showcase]]
       title = "A connected world"
-      subtitle = "How long do americans spend reading emails on a week?"
+      #subtitle = "How long do americans spend reading emails on a week?"
       image = "pic06.jpg"
       url = "blogs/blog9"
     # You can make more showcases by copy and pasting the code above
