--- a/config.toml
+++ b/config.toml
@@ -20,7 +20,7 @@ disqusShortname = ""
 
   # Provide your metadata here.
   name = "Nguissaly Gueye"
-  description = "A Senegalese at LBS MFA 2021"
+  description = "A Senegalese at LBS | MFA 2021"
 
   # Link custom assets relative to /static
   custom_css = []
